--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Venom 2 - сайт о фильме</title>
+    <title>Главная - Venom 2</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="blood">
+  <body class="blood-body">
     <div class="container">
       <header class="header">
-        <a href="/" class="logo-link">
+        <a href="/venom_2/" class="logo-link">
           <img width="46" height="71" src="img/logo.png" alt="logo: Venom" class="logo-image" />
         </a>
         <nav class="nav">
