--- a/about.html
+++ b/about.html
@@ -16,10 +16,14 @@
   <body class="primary-bg">
     <div class="container">
       <header class="header">
-        <a href="/venom_2/" class="logo-link">
+        <a href="/" class="logo-link">
           <img width="46" height="71" src="img/logo.png" alt="logo: Venom" class="logo-image" />
         </a>
         <nav class="nav">
+          <button class="menu-button">
+            <span class="menu-button-text">меню</span>
+            <img src="img/menu.svg" alt="icon: menu" class="menu-button-icon" />
+          </button>
           <ul class="nav-menu">
             <li class="nav-menu-item">
               <a href="about.html" class="nav-menu-link">о фильме</a>
@@ -92,5 +96,6 @@
       </div>
     </div>
     <!-- /.container -->
+    <script src="js/main.js"></script>
   </body>
 </html>
