--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
   <body class="blood-body">
     <div class="container">
       <header class="header">
-        <a href="/venom_2/" class="logo-link">
+        <a href="/" class="logo-link">
           <img width="46" height="71" src="img/logo.png" alt="logo: Venom" class="logo-image" />
         </a>
         <nav class="nav">
+          <button class="menu-button">
+            <span class="menu-button-text">меню</span>
+            <img src="img/menu.svg" alt="icon: menu" class="menu-button-icon" />
+          </button>
+          <button class="menu-close">
+            <span class="menu-close-text">закрыть</span>
+            <img src="img/arrow-right.svg" alt="icon: arrow-right" class="menu-close-icon" />
+          </button>
           <ul class="nav-menu">
             <li class="nav-menu-item">
               <a href="about.html" class="nav-menu-link">о фильме</a>
@@ -47,10 +55,14 @@
         </div>
         <!-- /.film-text -->
         <div class="button-group">
-          <button class="button button-primary">
+          <a
+            data-fancybox
+            href="https://www.youtube.com/watch?v=Othd8W8o3t0&ab_channel=%D0%92%D0%A0%D0%B5%D0%B9%D1%82%D0%B8%D0%BD%D0%B3%D0%B5%D0%92%D0%A0%D0%B5%D0%B9%D1%82%D0%B8%D0%BD%D0%B3%D0%B5%D0%9F%D0%BE%D0%B4%D1%82%D0%B2%D0%B5%D1%80%D0%B6%D0%B4%D0%B5%D0%BD%D0%BE"
+            class="button button-primary"
+          >
             <img width="15" src="img/play.svg" alt="icon: play" class="button-icon" />
             <span class="button-text">смотреть трейлер</span>
-          </button>
+          </a>
           <a href="trailer.html" class="button button-link">
             <img width="15" src="img/ticket.svg" alt="icon: Ticket" class="button-icon" />
             <span class="button-text">билеты на премьеру</span>
@@ -62,5 +74,12 @@
     </div>
     <!-- /.container -->
     <img src="img/venom.png" alt="photo: venom" class="venom" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
